# csv-normalizer

./: .gitignore  README.md  pyproject.toml  run_server.cmd  run_tests.cmd
app/: main.py  models.py  normalize.py  rules.py
examples/: README.md
samples/: latin1.csv  utf8.csv  utf8_bom.csv
tests/: test_smoke.py
