[project]
name = "csv-normalizer"
version = "0.1.0"
description = "Deterministic CSV normalization service for automation pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name" }
]

dependencies = [
  "fastapi",
  "uvicorn",
  "python-multipart",
  "charset-normalizer"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
